Added route for renaming teams
